kubernetes/201/08.istio-tutorial/rules/route-rule-recommendation-20-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v1
      weight: 80
    - destination:
        host: recommendation
        subset: v2
      weight: 20
