kubernetes/201/08.istio-tutorial/rules/route-rule-recommendation-v1-delay-1s.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 1s
    route:
    - destination:
        host: recommendation
        subset: v1
      weight: 50
    - destination:
        host: recommendation
        subset: v2
      weight: 50
