kubernetes/201/08.istio-tutorial/rules/route-rule-recommendation-v2-503.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v2
    fault:
      abort:
        httpStatus: 503
        percent: 50
