kubernetes/201/08.istio-tutorial/rules/route-rule-recommendation-v2-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v2
    retries:
      attempts: 3
      perTryTimeout: 2s
