kubernetes/201/08.istio-tutorial/rules/route-rule-recommendation-v2-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - timeout: 1s
    route:
    - destination:
        host: recommendation
        subset: v2
